--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Employee</string>
+    <string name="splash_quote">You never fail to make us proud </string>
+
 </resources>
